<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCuenta">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp"
        android:gravity="center"
        android:layout_above="@+id/cardView">

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_cuenta"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crea_una_cuenta"
                android:alpha="0.8"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:alpha="0.8"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ingresa_tus_nombres"
                android:hint="@string/ingresa_tu_nombre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                tools:ignore="ContentDescription,VisualLintTextFieldSize,EditableContentDescCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:alpha="0.8"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Ingresa tus apellidos"
                android:hint="@string/ingresa_tus_apellidos"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/white"
                tools:ignore="ContentDescription,EditableContentDescCheck,HardcodedText,VisualLintTextFieldSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel_fono"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ingresa_tu_n_mero_de_celular_aqui"
                android:inputType="number"
                android:maxLength="9"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize,EditableContentDescCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo_electr_nico"
                android:alpha="0.8"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/crreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:contentDescription="@string/ingresa_tu_correo_electr_nico"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"
                tools:ignore="ContentDescription,VisualLintTextFieldSize,EditableContentDescCheck" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrase_a"
                android:alpha="0.8"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/contr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:contentDescription="@string/ingresa_tu_contrase_a_aqui"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/icon_contra"
                tools:ignore="EditableContentDescCheck,VisualLintTextFieldSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttom_crearcuenta"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/registrarme"
                app:cornerRadius="28dp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ya_tienes_una_cuenta"
                    android:paddingStart="50dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/volverlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar_sesi_n1"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>







        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>