<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_app"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="28dp"
        android:gravity="center"
        android:layout_above="@+id/cardView">

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        tools:ignore="VisualLintBounds">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bienvenido"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/inicia_sesi_n"
                tools:ignore="TextContrastCheck"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo_electr_nico"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/ingresa_tu_correo_electr_nico"
                android:textColorHint="@color/white"
                android:minHeight="48dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrase_a"
                android:alpha="0.7"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/contra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:inputType="textPassword"
                android:hint="@string/ingresa_tu_contrase_a"
                android:textColorHint="@color/white"
                android:drawableEnd="@drawable/icon_contra"
                tools:ignore="Autofill,LabelFor,VisualLintTextFieldSize" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/recordar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recordar_cuenta"
                    android:layout_centerVertical="true"
                    android:alpha = "0.8"/>

                <TextView
                    android:id="@+id/recuperarCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:text="@string/olvid_mi_contrase_a"
                    tools:ignore="RelativeOverlap,TouchTargetSizeCheck" />
            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttom_iniciarsesion"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/iniciar_sesi_n"
                android:textStyle="bold"
                app:cornerRadius="28dp"
                app:backgroundTint="@color/color_app"
                tools:ignore="VisualLintButtonSize" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tienes_una_cuenta"
                    android:paddingStart="50dp"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:id="@+id/crear_cuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registrate"
                    android:paddingStart="10dp"
                    tools:ignore="RtlSymmetry" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:ignore="UselessLeaf">

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>






</RelativeLayout>