<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="16dp">


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/icon_cerrar"
        style="@style/TransparentFAB"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center|right"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cerrar_dialogo"
        android:src="@drawable/icon_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:tint="@android:color/black"
        app:backgroundTint="@android:color/transparent"


        tools:ignore="MissingConstraints,RtlHardcoded" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/icon_cerrar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_button_top_oval"
                android:text="@string/editar"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ver_postulacioness"
                android:background="@drawable/border_button_center_rect"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/eliminar"
                android:background="@drawable/border_button_bottom_oval"
                android:textColor="@android:color/black" />



        </LinearLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
